--- a/BarBrowse/Base.lproj/Main.storyboard
+++ b/BarBrowse/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12120"/>
-        <plugIn identifier="com.apple.WebKit2IBPlugin" version="12120"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
+        <plugIn identifier="com.apple.WebKit2IBPlugin" version="13196"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -655,7 +656,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BarBrowse" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Minifari" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
@@ -663,23 +664,20 @@
         <!--BrowseViewController-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController title="BrowseViewController" storyboardIdentifier="browse" id="XfG-lQ-9wD" customClass="BrowseViewController" customModule="BarBrowse" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="BrowseViewController" storyboardIdentifier="browse" id="XfG-lQ-9wD" customClass="BrowseViewController" customModule="Minifari" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="670" height="450"/>
+                        <rect key="frame" x="0.0" y="0.0" width="800" height="497"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <wkWebView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l08-Ig-8Ab">
-                                <rect key="frame" x="108" y="0.0" width="562" height="407"/>
+                                <rect key="frame" x="0.0" y="0.0" width="800" height="454"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
-                            <searchField wantsLayer="YES" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kf3-e6-JUf">
-                                <rect key="frame" x="156" y="415" width="481" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="481" id="1sY-MH-C5c"/>
-                                </constraints>
+                            <searchField wantsLayer="YES" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kf3-e6-JUf">
+                                <rect key="frame" x="56" y="462" width="711" height="22"/>
                                 <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="qSu-uE-8Jh">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -687,9 +685,9 @@
                                 </searchFieldCell>
                             </searchField>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="ZTI-PE-UUq">
-                                <rect key="frame" x="645" y="420" width="15" height="15"/>
+                                <rect key="frame" x="775" y="467" width="15" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="15" id="rBE-uY-gN3"/>
+                                    <constraint firstAttribute="width" constant="15" id="Qho-tc-Hyo"/>
                                 </constraints>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="loading" imagePosition="overlaps" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="EOD-k4-o3i">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -700,8 +698,8 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B8q-bl-bCY">
-                                <rect key="frame" x="593" y="13" width="63" height="32"/>
-                                <buttonCell key="cell" type="push" title="Exit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KeX-z8-c6Q">
+                                <rect key="frame" x="720" y="13" width="66" height="32"/>
+                                <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="KeX-z8-c6Q">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
@@ -709,36 +707,10 @@
                                     <action selector="quit:" target="XfG-lQ-9wD" id="L1g-JN-Fch"/>
                                 </connections>
                             </button>
-                            <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="92N-YP-GPa">
-                                <rect key="frame" x="0.0" y="0.0" width="100" height="450"/>
-                                <clipView key="contentView" drawsBackground="NO" id="SlJ-dr-Bwd">
-                                    <rect key="frame" x="1" y="1" width="98" height="448"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <collectionView id="n6E-x6-1KM">
-                                            <rect key="frame" x="0.0" y="0.0" width="98" height="448"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="Bea-Jj-dof">
-                                                <size key="itemSize" width="50" height="50"/>
-                                            </collectionViewFlowLayout>
-                                            <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                        </collectionView>
-                                    </subviews>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="ivm-fC-VPw">
-                                    <rect key="frame" x="1" y="433" width="97" height="16"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="7F7-7r-kXK">
-                                    <rect key="frame" x="233" y="1" width="16" height="201"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                            </scrollView>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="9i0-sK-3Jh" userLabel="next">
-                                <rect key="frame" x="133" y="420" width="15" height="15"/>
+                                <rect key="frame" x="33" y="467" width="15" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="15" id="jtl-vE-YWM"/>
+                                    <constraint firstAttribute="width" constant="15" id="ZHl-4l-uLR"/>
                                 </constraints>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="next" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="aax-qZ-hr2">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -749,9 +721,9 @@
                                 </connections>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="gpk-BF-c6K" userLabel="back">
-                                <rect key="frame" x="108" y="420" width="15" height="15"/>
+                                <rect key="frame" x="8" y="467" width="15" height="15"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="15" id="y72-bD-GmD"/>
+                                    <constraint firstAttribute="width" constant="15" id="fv5-hq-wku"/>
                                 </constraints>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="back" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Dlp-6B-Ctt">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -763,27 +735,24 @@
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="92N-YP-GPa" firstAttribute="bottom" secondItem="l08-Ig-8Ab" secondAttribute="bottom" id="1zK-mH-oUN"/>
-                            <constraint firstItem="Kf3-e6-JUf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="13" id="CTR-1G-QLZ"/>
-                            <constraint firstItem="92N-YP-GPa" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="H8M-xU-giu"/>
-                            <constraint firstItem="ZTI-PE-UUq" firstAttribute="leading" secondItem="Kf3-e6-JUf" secondAttribute="trailing" constant="8" symbolic="YES" id="LuQ-qP-NMH"/>
-                            <constraint firstItem="gpk-BF-c6K" firstAttribute="leading" secondItem="l08-Ig-8Ab" secondAttribute="leading" id="Mme-dY-7Ov"/>
-                            <constraint firstItem="9i0-sK-3Jh" firstAttribute="leading" secondItem="gpk-BF-c6K" secondAttribute="trailing" constant="10" symbolic="YES" id="Soy-Gj-wIV"/>
-                            <constraint firstItem="gpk-BF-c6K" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="15" id="beZ-Me-Fj9"/>
-                            <constraint firstAttribute="bottom" secondItem="92N-YP-GPa" secondAttribute="bottom" id="ceE-eS-gdt"/>
-                            <constraint firstItem="l08-Ig-8Ab" firstAttribute="top" secondItem="Kf3-e6-JUf" secondAttribute="bottom" constant="8" symbolic="YES" id="gWo-Lk-Uq2"/>
-                            <constraint firstItem="gpk-BF-c6K" firstAttribute="top" secondItem="9i0-sK-3Jh" secondAttribute="top" id="h5A-R8-7r4"/>
-                            <constraint firstAttribute="trailing" secondItem="B8q-bl-bCY" secondAttribute="trailing" constant="20" symbolic="YES" id="jNg-39-UU7"/>
-                            <constraint firstItem="92N-YP-GPa" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="mzW-QX-zdq"/>
-                            <constraint firstItem="l08-Ig-8Ab" firstAttribute="top" secondItem="gpk-BF-c6K" secondAttribute="bottom" constant="13" id="oEY-4d-EuG"/>
-                            <constraint firstItem="9i0-sK-3Jh" firstAttribute="top" secondItem="ZTI-PE-UUq" secondAttribute="top" id="os7-hd-m1K"/>
-                            <constraint firstItem="gpk-BF-c6K" firstAttribute="leading" secondItem="92N-YP-GPa" secondAttribute="trailing" constant="8" symbolic="YES" id="qJd-Dt-ojB"/>
-                            <constraint firstItem="9i0-sK-3Jh" firstAttribute="bottom" secondItem="ZTI-PE-UUq" secondAttribute="bottom" id="qPI-QO-2Hv"/>
-                            <constraint firstAttribute="trailing" secondItem="ZTI-PE-UUq" secondAttribute="trailing" constant="10" id="uay-JA-kdD"/>
-                            <constraint firstAttribute="trailing" secondItem="l08-Ig-8Ab" secondAttribute="trailing" id="wKH-QE-pHv"/>
-                            <constraint firstAttribute="bottom" secondItem="B8q-bl-bCY" secondAttribute="bottom" constant="20" symbolic="YES" id="xT8-Ii-5YS"/>
-                            <constraint firstItem="Kf3-e6-JUf" firstAttribute="leading" secondItem="9i0-sK-3Jh" secondAttribute="trailing" constant="8" symbolic="YES" id="xmw-10-IKR"/>
-                            <constraint firstItem="gpk-BF-c6K" firstAttribute="bottom" secondItem="9i0-sK-3Jh" secondAttribute="bottom" id="zh4-Ss-a51"/>
+                            <constraint firstAttribute="trailing" secondItem="ZTI-PE-UUq" secondAttribute="trailing" constant="10" id="3Dd-Gf-v6f"/>
+                            <constraint firstItem="gpk-BF-c6K" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="15" id="6Vx-3y-KOO"/>
+                            <constraint firstItem="ZTI-PE-UUq" firstAttribute="leading" secondItem="Kf3-e6-JUf" secondAttribute="trailing" constant="8" symbolic="YES" id="MFC-VG-edl"/>
+                            <constraint firstItem="Kf3-e6-JUf" firstAttribute="leading" secondItem="9i0-sK-3Jh" secondAttribute="trailing" constant="8" symbolic="YES" id="NZg-x4-uHk"/>
+                            <constraint firstAttribute="trailing" secondItem="l08-Ig-8Ab" secondAttribute="trailing" id="RcI-1R-PWy"/>
+                            <constraint firstItem="9i0-sK-3Jh" firstAttribute="leading" secondItem="gpk-BF-c6K" secondAttribute="trailing" constant="10" symbolic="YES" id="Sw5-B5-qix"/>
+                            <constraint firstAttribute="trailing" secondItem="B8q-bl-bCY" secondAttribute="trailing" constant="20" symbolic="YES" id="Vxi-SH-Lis"/>
+                            <constraint firstAttribute="bottom" secondItem="B8q-bl-bCY" secondAttribute="bottom" constant="20" symbolic="YES" id="Xi7-wB-pLa"/>
+                            <constraint firstItem="l08-Ig-8Ab" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="dBm-PH-gqV"/>
+                            <constraint firstItem="l08-Ig-8Ab" firstAttribute="top" secondItem="gpk-BF-c6K" secondAttribute="bottom" constant="13" id="dC7-MM-2Xs"/>
+                            <constraint firstItem="l08-Ig-8Ab" firstAttribute="top" secondItem="Kf3-e6-JUf" secondAttribute="bottom" constant="8" symbolic="YES" id="dhF-hk-wH2"/>
+                            <constraint firstAttribute="bottom" secondItem="l08-Ig-8Ab" secondAttribute="bottom" id="fLW-Cr-aNy"/>
+                            <constraint firstItem="gpk-BF-c6K" firstAttribute="top" secondItem="9i0-sK-3Jh" secondAttribute="top" id="frY-3z-u7W"/>
+                            <constraint firstItem="gpk-BF-c6K" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="8" id="ik0-b4-fqP"/>
+                            <constraint firstItem="Kf3-e6-JUf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="13" id="meX-Ax-AQ6"/>
+                            <constraint firstItem="9i0-sK-3Jh" firstAttribute="top" secondItem="ZTI-PE-UUq" secondAttribute="top" id="wLN-8l-VdG"/>
+                            <constraint firstItem="gpk-BF-c6K" firstAttribute="bottom" secondItem="9i0-sK-3Jh" secondAttribute="bottom" id="yWo-ru-ETS"/>
+                            <constraint firstItem="9i0-sK-3Jh" firstAttribute="bottom" secondItem="ZTI-PE-UUq" secondAttribute="bottom" id="ze2-c4-vCo"/>
                         </constraints>
                     </view>
                     <connections>
@@ -791,13 +760,12 @@
                         <outlet property="nextButton" destination="9i0-sK-3Jh" id="EOd-BV-T1g"/>
                         <outlet property="refreshButton" destination="ZTI-PE-UUq" id="I1Q-Pc-vvZ"/>
                         <outlet property="searchBar" destination="Kf3-e6-JUf" id="T1q-GO-xDK"/>
-                        <outlet property="tabsCollectionView" destination="n6E-x6-1KM" id="AWI-re-qqO"/>
                         <outlet property="webView" destination="l08-Ig-8Ab" id="I4V-MJ-s4I"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="188" y="292"/>
+            <point key="canvasLocation" x="253" y="315.5"/>
         </scene>
     </scenes>
     <resources>
